--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -10,3 +10,9 @@
       display: flex;
       justify-content: space-between;
 }
+
+.create-post{
+      margin: 1%;
+      display: flex;
+      flex-direction: row-reverse;
+}
