--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,7 +1,7 @@
 .post{
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-evenly;
       padding-top: 1%;
 }
 
@@ -15,4 +15,16 @@
       margin: 1%;
       display: flex;
       flex-direction: row-reverse;
+}
+
+.comments{
+      overflow-y: auto;
+      width : 50%;
+      height: 100vh;
+      background-color: rgb(220, 220, 220);
+      padding: 2% 2% 0 2% ;
+}
+
+.comment{
+      margin-bottom: 5px;
 }
